--- a/test.html
+++ b/test.html
@@ -83,7 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
     </div>
 </nav>
-
+<!-- 1111111111111111111111 -->
 <div class="container-fluid gtco-banner-area">
     <div class="container">
         <div class="row">
@@ -95,11 +95,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 There is no magic here, just traditional cooking
 with high quality farm ingredients.<br><br>Just 3 easy steps and 10 minutes of cook time with our All Natural Ready to Cook Base Gravy.<br><br>Feel the taste of your Moms Kitchen at home,
 every time! every where!
-                <!-- <h1 style="font-family:'Comfortaa',Bold;font-size:200%;"> natural,<br/>
-                  healthy<br/>
-                  & <br/>tasty!<br><br></h1> -->
-
-      <!-- <p>Say CurryUp</p> -->
       <br>
       <br>
                 <a href="shop.html">Shop Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
@@ -111,32 +106,8 @@ every time! every where!
     </div>
 </div>
 <br>
-
-<!-- <div class="container-fluid gtco-feature" id="services">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-5">
-                <h2 style="font-family:'Comfortaa',Bold;font-size:150%;">   fermented  super food!<br>
-                kezhvaragu koozh, a staple food of south india.  </h2>
-                <p style="font-family:'Roboto', sans-serif;">packed with tons of nutrients like essential amino acids this qualifies as one
-                 of the super foods and its fermented to add even more benefits to our health.
-                  <p>
-                    <small style="font-family:'Roboto', sans-serif;">we make sure you get healthy hygienic food every time and so you
-                      never need to worry about your food habits.
-                    </small>
-                </p>
-                <a href="#">Know More! <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-                <div class="col-md-7">
-                    <div class="cover">
-                        <img class="card-img-top" src="images/Websitekoozh.png" alt="">
-                    </div>
-                </div>
-        </div>
-    </div>
-</div> -->
 <br>
-
+<!-- 222222222222222222222222 -->
 <div class="container-fluid gtco-feature" id="services">
     <div class="container" >
         <div class="row">
@@ -147,93 +118,48 @@ every time! every where!
 
   <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1597056807/CUWebsite/14_njumwf.png" alt="">
                             <!-- this is blue back box code-->
-
                     </div>
                 </div>
             </div>
             <div class="col-md-5">
-              <h2 style="font-family: 'Poppins', sans-serif Bold;font-size:150%;"> we are your nutrition partner!<br>
-                  providing you with our all natural and fresh ready to cook Base Gravy </h2>
+              <h1 style="font-family: 'Poppins', sans-serif;font-size:300%;color:rgb(255, 156, 52);text-shadow: 4px 2px 6px #bbb8b8;">3 Easy Steps </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;"> </h3>
               <p style="font-family: 'Poppins', sans-serif;"> Food is the one thing that should never be compromised even if everything around us changes. So we got you our Fresh ready-to-cook Base-Gravy to eat healthy in this fast phase lifestyle.
                 <p>
                   <small style="font-family: 'Poppins', sans-serif;">We make sure you get healthy hygienic food every time and so you never need to worry about your food habits.
                   </small>
               </p>
-              <a href="#">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+            </div>
       </div>
   </div>
 </div>
 
-
+<!-- 3333333333333333333 -->
 <div class="container-fluid gtco-banner-area">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h4><span style="color:#369b0b;font-size:90%;margin-bottom:-20px;">made natural</span> </h4>
+                <h4><span style="color:#000000;font-size:90%;margin-bottom:-20px;">Ready To Cook</span> </h4>
 
-                    <h1 style="font-family: 'Poppins', sans-serif,Bold;font-size:300%;">Base-Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;">a ready to cook<span style="text-decoration:red line-through;">
- magic</span> masala Gravy</span> </h3>
-                <p style="font-family: 'Poppins', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients. <br> <br>cooking time reduced to just 10 minutes while tons of customization possible, so today's kids never miss their <br>Amma's Kai Pakuvam! </p>
-                <!-- <h1 style="font-family:'Comfortaa',Bold;font-size:200%;"> natural,<br/>
-                  healthy<br/>
-                  & <br/>tasty!<br><br></h1> -->
-                  <div class="text" style="margin-top:-50px;">
-                    <p style="font-size:150%; font-family: 'Poppins', sans-serif,;color:#000000;">spend more time</p>
-                    <p>
-                          <span class="word green"style="font-size:150%;font-family: 'Poppins', sans-serif;"> at-dinning.</span>
-                      <span class="word wisteria"style="font-size:150%;font-family: 'Poppins', sans-serif;">not-kitchen.</span>
-                      <!-- <span class="word belize">natural.</span>
-                      <span class="word pomegranate">tasty.</span> -->
-                    </p>
-                  </div>
-      <!-- <p>Say CurryUp</p> -->
-                <a href="shop.html">Shop Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-
+                    <h1 style="font-family: 'Poppins', sans-serif;font-size:300%;color:rgb(255, 156, 52);text-shadow: 4px 2px 6px #bbb8b8;">All Natural </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;"> </h3>
+                <p style="font-family: 'Poppins', sans-serif;font-size:110%"> Lets keep it simple.
+There is no magic here, just traditional cooking
+with high quality farm ingredients.<br><br>Just 3 easy steps and 10 minutes of cook time with our All Natural Ready to Cook Base Gravy.<br><br>Feel the taste of your Moms Kitchen at home,
+every time! every where!
+      <br>
+      <br>
+              </div>
             <div class="col-md-6">
               <!-- <br> -->
-                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596994253/CUWebsite/5_jmsatv.png" alt="">
+                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1597056808/CUWebsite/13_mkry73.png" alt="">
             </div>
         </div>
     </div>
 </div>
-
-<div class="container-fluid gtco-banner-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h4><span style="color:#369b0b;font-size:90%;margin-bottom:-20px;">made natural</span> </h4>
-
-                    <h1 style="font-family: 'Poppins', sans-serif,Bold;font-size:300%;">Base-Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;">a ready to cook<span style="text-decoration:red line-through;">
- magic</span> masala Gravy</span> </h3>
-                <p style="font-family: 'Poppins', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients. <br> <br>cooking time reduced to just 10 minutes while tons of customization possible, so today's kids never miss their <br>Amma's Kai Pakuvam! </p>
-                <!-- <h1 style="font-family:'Comfortaa',Bold;font-size:200%;"> natural,<br/>
-                  healthy<br/>
-                  & <br/>tasty!<br><br></h1> -->
-                  <div class="text" style="margin-top:-50px;">
-                    <p style="font-size:150%; font-family: 'Poppins', sans-serif,;color:#000000;">spend more time</p>
-                    <p>
-                          <span class="word green"style="font-size:150%;font-family: 'Poppins', sans-serif;"> at-dinning.</span>
-                      <span class="word wisteria"style="font-size:150%;font-family: 'Poppins', sans-serif;">not-kitchen.</span>
-                      <!-- <span class="word belize">natural.</span>
-                      <span class="word pomegranate">tasty.</span> -->
-                    </p>
-                  </div>
-      <!-- <p>Say CurryUp</p> -->
-                <a href="shop.html">Shop Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-
-            <div class="col-md-6">
-              <!-- <br> -->
-                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596994254/CUWebsite/10_wveoz4.png" alt="">
-            </div>
-        </div>
-    </div>
-</div>
-
 <br>
 
 
 <br>
-
+<!-- 444444444444444444444 -->
 <div class="container-fluid gtco-feature" id="services">
     <div class="container" >
         <div class="row">
@@ -242,24 +168,27 @@ every time! every where!
                   <br>
                     <div class="card">
 
-  <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596994254/CUWebsite/10_wveoz4.png" alt="">
+  <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1597056807/CUWebsite/12_khwksj.png" alt="">
                             <!-- this is blue back box code-->
 
                     </div>
                 </div>
             </div>
             <div class="col-md-5">
-              <h2 style="font-family: 'Poppins', sans-serif Bold;font-size:150%;"> we are your nutrition partner!<br>
-                  providing you with our all natural and fresh ready to cook Base Gravy </h2>
+              <h1 style="font-family: 'Poppins', sans-serif;font-size:300%;color:rgb(255, 156, 52);text-shadow: 4px 2px 6px #bbb8b8;">3 Easy Steps </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;"> </h3>
               <p style="font-family: 'Poppins', sans-serif;"> Food is the one thing that should never be compromised even if everything around us changes. So we got you our Fresh ready-to-cook Base-Gravy to eat healthy in this fast phase lifestyle.
                 <p>
                   <small style="font-family: 'Poppins', sans-serif;">We make sure you get healthy hygienic food every time and so you never need to worry about your food habits.
                   </small>
               </p>
-              <a href="#">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+            </div>
       </div>
   </div>
 </div>
+<br>
+
+
+<br>
 
 
 <div class="container-fluid gtco-features" id="about">
